# ldid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_library.cmake  build-iphoneos.sh  build-macosx.sh  ios.sh  iphoneos.toolchain.cmake  make.sh
cmake/: iphoneos.toolchain.cmake
